# PSM

./: .gitignore  README.md  package-lock.json  package.json  parse-fails-raw.b64.txt  smoke-req1.txt  smoke-server.in  tsconfig.base.json  tsconfig.json
psm-model/: README.md  pyproject.toml
psm-model/docker/: .dockerignore  Dockerfile
psm-model/notebooks/: psm-50m-product-safe-gate-colab.ipynb
psm-model/prod-memory/: README.md
psm-model/scripts/: _check_hf_lora_remote.py  _colab_check_progress.py  _hf_lora_finish.py  _hf_lora_upload_all.py  _locomo_progress.py  _locomo_status.py  _monitor_hf_v5.py  _openrouter_training_review.py  _probe_train_progress.py  _pull_eval_status.py  _pull_prod_eval.py  _recover_prod_v4.py  _run_confirm_followup.py  _run_exp_a.py  _run_exp_b.py  _run_exp_c.py  _run_exp_d.py  _run_exp_e.py  _run_hf_locomo.py  _run_hf_lora.py  _run_hf_lora_eval.py  _run_locomo_hf_full.py  _runpod_locomo_clone.sh  _runpod_locomo_resume.py  _sync_hf_lora.py  _upload_eval_from_pod.py  _upload_hf_prod_assets.py  _upload_prod_v4_hf.py  _upload_prod_v5_hf.py  _upload_prod_v6_hf.py  _upload_prod_v7_hf.py  _watch_hf_lora.py  _watch_locomo_sync.py  bench_remember_latency.py  bench_remember_runtime.mjs  bench_remember_server.py  build_mixed_curriculum_v2.ps1  build_parse_fail_subset.py  classify_parse_failures.py  colab_auth_wsl.sh  (+93 more)
psm-model/tests/: test_action_classifier.py  test_binary_format.py  test_build_gate4_curriculum.py  test_build_gate4_train_v1.py  test_build_gate4_train_v2.py  test_build_gate4_train_v3.py  test_configs.py  test_convert_nano_dataset.py  (+25 more)
(+445 files in other folders)
