[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "psm-model"
version = "0.1.0"
description = "Generative PSM model experiments"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = ["torch"]

[tool.setuptools.packages.find]
where = ["src"]
